# ethercat-rs

./: AKD EtherCAT Device Description.xml  Cargo.toml  README.md
src/: main.rs
