[package]
name = "ethercat-test"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Go back to using `ETHERCAT_PATH` env var instead of relying on version match with this
# `pregenerated-bindings` feature.
ethercat = { path = "../../ethercat", version = "0.2.2" }
ethercat-esi = "0.2.0"
